<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/favoriteFragment">

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.project.screens.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_chapterListFragment"
            app:destination="@id/chapterListFragment"
            app:popUpTo="@id/favoriteFragment" />
        <action
            android:id="@+id/action_favoriteFragment_to_chapterFragment"
            app:destination="@id/chapterFragment"
            app:popUpTo="@id/chapterListFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.project.screens.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/chapterListFragment"
        android:name="com.example.project.screens.chapterList.ChapterListFragment"
        android:label="@string/chapters"
        tools:layout="@layout/fragment_chapter_list" >
        <action
            android:id="@+id/action_chapterListFragment_to_chapterFragment"
            app:destination="@id/chapterFragment"
            app:popUpTo="@id/chapterListFragment" />
    </fragment>
    <fragment
        android:id="@+id/chapterFragment"
        android:name="com.example.project.screens.reading.ChapterFragment"
        android:label="@string/reading"
        tools:layout="@layout/fragment_chapter" >
        <action
            android:id="@+id/action_chapterFragment_to_infosChapterFragment"
            app:destination="@id/infosChapterFragment"
            app:popUpTo="@id/chapterFragment" />
        <argument
            android:name="chapterId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/infosChapterFragment"
        android:name="com.example.project.screens.infos.InfosChapterFragment"
        android:label="@string/infos"
        tools:layout="@layout/fragment_infos_chapter" >
        <argument
            android:name="chapterId"
            app:argType="integer" />
    </fragment>
</navigation>